# HN24_FR_OJT_AUTOSAR_01-Caro_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  Re_play.ini  Users.ini
src/client/: client.c  handle_response.c  send_request.c
src/common/: protocol.c  protocol.h
src/control/admin/: replay_manage.c  user_manage.c
src/control/login/: Users.ini  sign_in.c  sign_out.c  sign_up.c  user.c  user.h  user_ini_read.c  user_ini_write.c
src/control/play_caro/: find_game.c  play_caro.c
src/control/replay_watch/: show_replay.c  watch_replay.c
src/model/: Users.ini  games.c  games.h  replay_ini_read.c  replay_ini_write.c  user_ini_read.c  user_ini_write.c  users.c  users.h
src/model/src/control/login/: user_ini_write.c
src/server/: handle_request.c  server.c
src/view/: dashbroad.c  top_screen.c  top_screen.h
src/view/admin_screen/: admindashboard.c  replay_management.c  user_management.c
src/view/caro_play_screen/: find_player.c  play_caro.c
src/view/login_screen/: sign_in.c  sign_in.h  sign_up.c  sign_up.h
src/view/replay_screen/: show_replay.c  watch_replay.c
